[project]
name = "driving_assistant"
version = "1.0.0"
description = "A brief description of your project."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Richard Omega", email = "richardjoseph.omega@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "opencv-python==4.10.0.84",
    "matplotlib==3.10.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["driving_assistant"]

[project.scripts]
driving-assistant = "driving_assistant.__main__:main"